--- a/source_sass/_mixins.scss
+++ b/source_sass/_mixins.scss
@@ -10,6 +10,12 @@
     transform: translateX($x);
 }
 
+@mixin translate($x, $y){
+	-ms-transform: translate($x, $y);
+   	-webkit-transform: translate($x, $y);
+    transform: translate($x, $y);
+}
+
 @mixin transition($transition) {
 	transition: $transition;
 	-webkit-transition: $transition;
@@ -36,4 +42,10 @@
 	 -ms-transform: scale($scaleX, $scaleY); /* IE 9 */
     -webkit-transform: scale($scaleX, $scaleY); /* Safari */
     transform: scale($scaleX, $scaleY);
+}
+
+@mixin box-shadow() {
+	-webkit-box-shadow: 0px 10px 10px  #888;
+	-moz-box-shadow: 0px 10px 10px  #888;
+	box-shadow: 0px 10px 10px  #888;
 }
