--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -1,60 +1,122 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,500|Sacramento:600,400,300|Roboto+Slab:300);
 $raleway: 'Raleway', serif;
 $openSans: 'Open Sans', serif;
-.home{
 
+.contactme{
+	width: 100vw;
+	margin-top: 60px;
+	padding-bottom: 20px;
+	font-family: $openSans;
+	font-weight: 300;
+	line-height: 35px;
+	color: black;
+	text-align: center;
+	h3{
+		font-family: $openSans;
+		color: #808080;
+		letter-spacing: 1px;
+		text-align: center;
+		margin-top: 5px;
+		font-weight: 300;
+		font-size: 20px;
+		@include breakpoint (large) {
+			font-size: 30px;
+		}
+	}
+	a{
+		border-bottom: dotted 1px #aeaeae; 
+		color: #505050;
+		font-size: 25px;
+		@include breakpoint(large) {
+			font-size: 30px;
+		}
+		&:visited{
+			color: #505050;
+		}
+		&:hover{
+			color: #C5B358;
+			@include transition(all 0.1s ease-in-out);
+		}
+	}
+	p{
+		margin-top: 20px;
+		color: #aeaeae;
+		letter-spacing: 1px;
+		font-weight: 300;
+		font-size: 20px;
+	}
+}
+
+.eyeimg{
+	width: 100%;
+	text-align: center;
+	img{
+		@include breakpoint(small){
+			width: 20vw;
+		}
+		@include breakpoint(large){
+			width: 8vw;
+		}
+	}
+}
+
+.home{
 	.intro{
 		width: 100vw;
-		min-height: 100vh;
-		padding-top: 60px;
+		min-height: 80vh;
+		@include breakpoint(large) {
+			min-height: 100vh;
+		}
+		padding: 60px 0;
 		position: relative;
 		.introImage{
-			@include breakpoint(small){
-				width: 100%;
-			}
-			@include breakpoint(medium){
+			width: 100%;
+			@include breakpoint(large){
 				width: 50%;
 				display: inline-block;
 				position: absolute;
 				left: 10px;
 				top: 50%;
+				padding-right: 6%;
 				@include translateY(-50%);
 			}
 			.profilepic{
 				border-radius: 50%;			
-				@include breakpoint(small){
-					display: block;
-					width: 55%;
-					margin-bottom: 10px;
-					margin-left: auto;
-					margin-right: auto;
+				display: block;
+				width: 55%;
+				margin-bottom: 10px;
+				margin-left: auto;
+				margin-right: auto;
+				@include breakpoint(large){
+					width: 330px;
+					border-radius: 6px;
+					margin-right: 0;
 				}
-				@include breakpoint(medium){
-					width: 50%;
-				}
-				
+			}
+			text-align: center;
+			@include breakpoint(large) {
+					text-align: right;
 			}
 			h2{
 				font-family: 'Sacramento', Helvetica, sans-serif;
 				font-weight: 500;
 				color: #C5B358;
 				letter-spacing: 0.5px;
-				font-size: 26pt;
-				margin-left: auto;
-				margin-right: auto;
-				text-align: center;
+				font-size: 25pt;
+				@include breakpoint(large) {
+					margin: 15px auto;
+					font-size: 50px;
+				}
 			}
 			h3{
-				@include breakpoint(medium){
-					font-size: 18pt;
+				@include breakpoint(large){
+					font-size: 25px;
 				}
 				font-family: $openSans;
 				color: #808080;
 				letter-spacing: 1px;
-				text-align: center;
 				margin-top: -10px;
 				font-weight: 300;
-				/*font-size: 20px;*/
 				text-decoration: none;
 				a{
 					color: #808080;
@@ -66,36 +128,40 @@ $openSans: 'Open Sans', serif;
 			}
 		}
 		.experience{
-			@include breakpoint(small only){
-				margin-top: 40px;
+			@include breakpoint (small only){
+				margin-top: 20px;				
 			}
-			@include breakpoint(medium){
+			@include breakpoint(large){
 				display: inline-block;
 				width: 50%;
 				position: absolute;
-				right: 10px;
+				padding-left: 2%;
 				top: 50%;
-				@include translateY(-50%);
+				@include translate(100%, -50%);
 			}
 			ul{
 				list-style: none;
-				margin-left: 30px;
-				margin-right: 30px;
+				max-width: 400px;
+				@include breakpoint(small only) {
+					padding: 0 20px;
+				}
+				@include breakpoint(medium only) {
+					margin: auto;
+				}
 				li{
-					@include breakpoint(large){
-						margin-bottom: 20px;
-					}
-
 					cursor: pointer;
-					&:hover{
-						h5{
-							@include transition(all 0.125s ease-in-out);
-							color: #C5B358;
-						}
-						@include breakpoint(medium){
-							span.fa-angle-right{
-								@include translateX(5px);
+					@include breakpoint(large) {
+						margin-bottom: 20px;
+						&:hover{
+							h5{
 								@include transition(all 0.125s ease-in-out);
+								color: #C5B358;
+							}
+							@include breakpoint(large){
+								span.fa-angle-right{
+									@include translateX(5px);
+									@include transition(all 0.125s ease-in-out);
+								}
 							}
 						}
 					}
@@ -104,9 +170,15 @@ $openSans: 'Open Sans', serif;
 					margin-bottom: -10px;
 					h5{
 						margin-bottom: 0px;
-						font-size: 20px;
+						font-size: 18px;
 						color: #303030;
 						font-weight: 300;
+						@include breakpoint(large) {
+							font-size: 25px;
+						}
+						&.extended {
+							color: #C5B358;
+						}
 					}
 					span{
 						font-size: 20px;
@@ -156,35 +228,14 @@ $openSans: 'Open Sans', serif;
 		@include breakpoint(small only){
 			margin-bottom: 30px;
 			min-height: 80vh;
-			padding-top: 50px;
 		}
-		@include breakpoint(medium only){
-			@include breakpoint(portrait){
-				min-height: 100vh;	
-			}
-			@media (orientation: landscape) {
-				min-height: 700px;
-			}
-			
-		}
-		@include breakpoint(medium){
+		@include breakpoint(large){
 			width: 80vw;
 			margin-left: auto;
 			margin-right: auto;
 			min-height: 80vh;
 		}
-		.eyeimg{
-			width: 100%;
-			text-align: center;
-			img{
-				@include breakpoint(small){
-					width: 20vw;
-				}
-				@include breakpoint(medium){
-					width: 8vw;
-				}
-			}
-		}
+
 		h3{
 			font-family: $openSans;
 			color: #808080;
@@ -192,200 +243,240 @@ $openSans: 'Open Sans', serif;
 			text-align: center;
 			margin-top: 5px;
 			font-weight: 300;
+			font-size: 20px;
+			@include breakpoint (large) {
+				font-size: 30px;
+			}
 		}
 		.thumbnails{
 			margin-top: 20px;
-			@include breakpoint(small only) {
-				width: 90%;
-			}
 			width: 100%;
-			margin-left: auto;
-			margin-right: auto;
+			margin: auto;
+			max-width: 1000px;
+			padding: 0 5px;
 			.thumb_nail{
-				&.appear{
-					@include translateY(0px);
-					opacity: 1;
-					@include transition(all 0.5s ease-in-out);
-				}
-				&:hover{
-					@include scale(1.03, 1.03);
-					@include transition(all 0.25s ease-out);
-					h5{
-						color: #C5B358;
-					}
-					p{
-						@include transition(all 0.4s ease-in-out);
-						opacity: 1;
-					}
-					.background-img{
-						background-color: rgba(0,0,0, 0.7);
-					}
-				}
 				opacity:0;
 				display: inline-block;
+				padding: 5px 5px;
 				@include translateY(-10px);
 				cursor: pointer;
 				@include breakpoint(small){
 					height:150px;
 					width: 50%;
 					float: left;
-					/*padding: 5px 5px 5px 5px;*/
 				}
 				@include breakpoint(medium){
 					height: 200px;
-					width: 50%;
 					padding: 10px 10px 10px 10px;
 				}
 				@include breakpoint(large){
 					width: percentage(1/3);
 					height: 200px;
 				}
-				border-radius: 6px;
-				position: relative;
-				.background-img{
-					position: absolute;
-					height: 90%;
-					width: 90%;
-					left: 0;
-					right: 0;
-					margin-left: auto;
-					margin-right: auto;
+				&.appear{
+					@include translateY(0px);
+					opacity: 1;
+					@include transition(all 0.5s ease-in-out);
+					&:hover{
+						@include scale(1.03, 1.03);
+						@include transition(all 0.25s ease-out);
+						.thumb_nail_container {
+							h5{
+								color: #C5B358;
+							}
+							p{
+								@include transition(all 0.4s ease-in-out);
+								opacity: 1;
+							}
+							.background-img{
+								background-color: rgba(0,0,0, 0.7);
+							}
+						}
+					}
+				}
+
+				
+				.thumb_nail_container {
 					border-radius: 6px;
+					width: 100%;
+					height: 100%;
+					margin: auto;
+					background-size:cover; 
+					background-position:center center; 
+					background-repeat:no-repeat;
 					background-color: rgba(0,0,0,0.5);
 					background-blend-mode: overlay;
+					position: relative;
+					h5{
+						position: absolute;
+						@include breakpoint(small){
+							left: 10px;
+							top: 5px;
+							font-size: 18px;
+						}
+						@include breakpoint(medium){
+							left: 20px;
+							top: 13px;
+							font-size: 20px;
+						}
+						font-family: $openSans;
+						letter-spacing: 0.8px;
+						color: white;
+					}
+					p{
+						@include breakpoint(small){
+							display: none;
+						}
+						@include breakpoint(medium){
+							display: block;
+						}
+						position: absolute;
+						opacity:0;
+						font-family: 'Roboto Slab', garamond, serif;
+						letter-spacing: 0.8px;
+						color: white;
+						top: 45px;
+						left: 20px;
+						width: 80%;
+						font-size: 18px;
+					} 
 				}
 				&:nth-child(1){
-					.background-img{
-						background-size:cover; 
-						background-position:center center; 
-						background-repeat:no-repeat; 
-						background-image:url('../data/images/work_projects.png');
+					.thumb_nail_container {
+						background-image: url('../data/images/project_sapphire.png');
 					}
 				}
 				&:nth-child(2){
-					.background-img{
-						background-size:cover; 
-						background-position:center center; 
-						background-repeat:no-repeat; 
-						background-image:url('../data/images/work_designs.png');
+					.thumb_nail_container {
+						background-image: url('../data/images/work_designs.png');
 					}
 				}
 				&:nth-child(3){
-					.background-img{
-						background-size:cover; 
-						background-position:center center; 
-						background-repeat:no-repeat; 
-						background-image:url('../data/images/work_photos.png');
+					.thumb_nail_container {
+						background-image: url('../data/images/work_photos.png');
 					}
 				}
 				&:nth-child(4){
-					.background-img{
-						background-size:cover; 
-						background-position:center center; 
-						background-repeat:no-repeat; 
-						background-image:url('../data/images/work_writings.png');
+					.thumb_nail_container {
+						background-image: url('../data/images/work_writings.png');
 					}
 				}
 				&:nth-child(5){
-					.background-img{
-						background-size:cover; 
-						background-position:center center; 
-						background-repeat:no-repeat; 
-						background-image:url('../data/images/cestlavie.png');
-					}	
+					.thumb_nail_container {
+						background-image: url('../data/images/cestlavie.png');
+					}
 				}
 				&:nth-child(6){
-					.background-img{
-						background-size:cover; 
-						background-position:center center; 
-						background-repeat:no-repeat; 
-						background-image:url('../data/images/bonvoyage.png');
-					}	
+					.thumb_nail_container {
+						background-image: url('../data/images/bonvoyage.png');
+					}
 				}
-				h5{
-					position: absolute;
-					@include breakpoint(small){
-						left: 20px;
-						top: 5px;
-						font-size: 18px;
-					}
-					@include breakpoint(medium){
-						left: 25px;
-						top: 15px;
-						font-size: 20px;
-					}
-					font-family: $openSans;
-					letter-spacing: 0.8px;
-					color: white;
-				}
-				p{
-					@include breakpoint(small){
-						display: none;
-					}
-					@include breakpoint(medium){
-						display: block;
-					}
-					position: absolute;
-					opacity:0;
-					font-family: 'Roboto Slab', garamond, serif;
-					letter-spacing: 0.8px;
-					color: white;
-					top: 45px;
-					left: 25px;
-					font-size: 18px;
-				}
-
 			}
 		}
-
 	}
 	
-	.contactme{
-		width: 100vw;
-		margin-top: 80px;
-		padding-bottom: 40px;
+	
+}
+
+.apps {
+	opacity: 0;
+	overflow: hidden;
+	.header {
 		font-family: $openSans;
-		font-size: 20pt;
-		font-weight: 300;
-		line-height: 35px;
-		color: black;
-		text-align: center;
-		div{
-			width: 100%;
+		margin-top: 30px;
+		h2 {
 			text-align: center;
-			img{
-				@include breakpoint(small){
-					width: 20vw;
-				}
-				@include breakpoint(medium){
-					width: 8vw;
-				}
-			}
+			color: #303030;
+			margin: 0;
+			font-weight: 400;
+			font-family: 'Sacramento', Helvetica, sans-serif;
+			font-size: 55px;
 		}
-		h3{
-			font-family: $openSans;
+		p {
 			color: #808080;
 			letter-spacing: 1px;
 			text-align: center;
-			margin-top: 5px;
 			font-weight: 300;
-		}
-		a{
-			border-bottom: dotted 1px #aeaeae; 
-			color: #505050;
-			/*font-size: 18pt;*/
-			&:visited{
-				color: #505050;
-			}
-			&:hover{
-				color: #C5B358;
-				@include transition(all 0.1s ease-in-out);
+			font-size: 20px;
+			@include breakpoint (large) {
+				font-size: 30px;
 			}
 		}
-		h5{
-			margin-top: 20px;
-			color: #aeaeae;
-			letter-spacing: 1px;
+	}
+	.projects {
+		list-style: none;
+		max-width: 1000px;
+		margin: auto;
+		overflow: hidden;
+		padding-bottom: 30px;
+		.project {
+			float: left;
+			width: 100%;
+			padding: 10px 30px;
+			@include breakpoint(medium) {
+				width: percentage(1/3);
+				padding: 10px 15px;
+			}
+			
+			background-color: transparent;
+			.project_container {
+				border: dotted 2px rgba(189, 178, 119, 0.8);
+				border-radius: 6px;
+				overflow: hidden;
+				position: relative;
+				@include transition(box-shadow 0.4s ease-in-out);
+				&:hover {
+					@include box-shadow();
+				}
+				.project_desc {
+					opacity: 0;
+					@include transition(opacity 0.35s ease-in-out);
+					&:hover {
+						opacity: 1;
+					}
+					position: absolute;	
+					bottom: 0;
+					height: 100%;
+					width: 100%;
+					background-color: rgba(0, 0, 0, 0.80);
+					.project_desc_container {
+						position: absolute;
+						width: 80%;
+						left: 0;
+						right: 0;
+						margin: auto;
+						top: 50%;
+						@include translateY(-50%);
+						text-align: center;
+						h5 {
+							font-family: $openSans;
+							color: #C5B358;
+							@include breakpoint(small only) {
+								font-size: 25px;
+							}
+						}
+						p {
+							font-family: 'Roboto Slab', garamond, serif;
+							color: white;
+							letter-spacing: 1px;
+							margin-bottom: 8px;
+							@include breakpoint(small only) {
+								font-size: 18px;
+							}
+						}
+						a {
+							color: #C5B358;
+							&:visited {
+								color: #C5B358;
+							}
+							@include breakpoint(small only) {
+								font-size: 20px;
+							}
+							border-bottom: dotted 1px #aeaeae;
+						}
+					}
+				}	
+			}
 		}
 	}
 }
