--- a/public/partials/apps.html
+++ b/public/partials/apps.html
@@ -11,7 +11,7 @@
 					<div class="project_desc_container">
 						<h5>Wayfair Match</h5>
 						<p>Hackathon Project during my summer internship at Wayfair. It's a tinder for furniture to promote sales. </p>
-						<a href="http://zhengbangc.com/wayfair-match">Check it out</a>
+						<a href="http://zhengbangc.github.io/wayfair-match">Check it out</a>
 					</div>
 				</div>
 			</div>
@@ -23,7 +23,7 @@
 					<div class="project_desc_container">
 						<h5>IMDB Top 100</h5>
 						<p>Built with AngularJS, this app allows user to browse, filter and search for movies in IMDB's Top 100 Moives</p>
-						<a href="http://zhengbangc.com/sapphire">Check it out</a>
+						<a href="http://zhengbangc.github.io/sapphire">Check it out</a>
 					</div>
 				</div>
 			</div>
