--- a/public/partials/apps.html
+++ b/public/partials/apps.html
@@ -2,6 +2,7 @@
 	<div class="header">
 		<h2>Apps & Projects</h2>
 		<p>Inspired by the elegance of human</p>	
+		{{isMobile}}
 	</div>
 	<ul class="projects">
 		<li class="project">
