--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -435,6 +435,7 @@ $openSans: 'Open Sans', serif;
 					opacity: 0;
 					@include transition(opacity 0.35s ease-in-out);
 					position: absolute;	
+					z-index: 2;
 					bottom: 0;
 					height: 100%;
 					width: 100%;
