--- a/public/partials/apps.html
+++ b/public/partials/apps.html
@@ -40,6 +40,42 @@
 				</div>
 			</div>
 		</li>		
+		<li class="project">
+			<div class="project_container">
+				<img src="./data/images/project_golden.png" class="project_image">
+				<div class="project_desc">
+					<div class="project_desc_container">
+						<h5>Gallery</h5>
+						<p>Built with AngularJS, NodeJS and MongoDB, this is a responsive demo app for a personal gallery</p>
+						<a href="http://zhengbangc.github.io/golden">Check it out</a>
+					</div>
+				</div>
+			</div>
+		</li>
+		<li class="project">
+			<div class="project_container">
+				<img src="./data/images/project_zappos.png" class="project_image">
+				<div class="project_desc">
+					<div class="project_desc_container">
+						<h5>Zappos Interview Challenge</h5>
+						<p>This responsive site was for Zappos Interview Challenge in Fall 2015</p>
+						<a href="http://zhengbangc.github.io/luvletter_zappos">Check it out</a>
+					</div>
+				</div>
+			</div>
+		</li>
+		<li class="project">
+			<div class="project_container">
+				<img src="./data/images/project_flight.png" class="project_image">
+				<div class="project_desc">
+					<div class="project_desc_container">
+						<h5>WebGL Flight</h5>
+						<p>Flight simulator built with WebGL.</p>
+						<a href="http://zhengbangc.github.io/WebGL-Flight">Check it out</a>
+					</div>
+				</div>
+			</div>
+		</li>
 	</ul>
 	<div class="contactme">
 			<div class="eyeimg"><img src="data/images/close.svg"></div>
