--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -55,30 +55,30 @@
 			</div>
 			<div class="thumb_nail">
 				<div class="thumb_nail_container">
-					<a ng-href="#"></a>
+					<a ng-href="https://www.instagram.com/zhengbangc/?hl=en"></a>
 					<h5>Photographs</h5>
 					<p>Crystal clear with a shallow depth of field.</p>
 				</div>
 			</div>
 			<div class="thumb_nail">
 				<div class="thumb_nail_container">
-					<a ng-href="#"></a>
+					<a ng-href="/"></a>
 					<h5>Writings & Inspirations</h5>
 					<p>Emotions... all great designs appeal to emotions.</p>
 				</div>
 			</div>
 			<div class="thumb_nail">
 				<div class="thumb_nail_container">
-					<a ng-href="#"></a>
+					<a ng-href="/"></a>
 					<h5>C'est La Vie</h5>
 					<p>Carpe Diem!</p>
 				</div>
 			</div>
 			<div class="thumb_nail">
 				<div class="thumb_nail_container">
-					<a ng-href="#"></a>
-					<h5>Bon Voyage</h5>
-					<p>Understand humanity and culture.</p>
+					<a ng-href="https://www.youtube.com/watch?v=NHfbzp7VBcI"></a>
+					<h5>Film: Invisible Lover</h5>
+					<p>Montage about a dark love story</p>
 				</div>
 			</div>
 		</div>
