--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,9 +1,20 @@
-<div class="home">    
+<div class="home">
+	<nav>
+		<a href="#works">Works</a>
+		<a href="#about">About</a>
+		<a href="">Skills</a>
+	</nav>
 	<div class="intro">
-		<div class="introImage">
+		<div class="intro_container">
+			<h2>Zhengbang Chen</h2>
+			<p>A vibrant and proactive <span class="rotate">Engineer, Designer, Curator</span> </p>
+		</div>
+	</div>
+	<div class="aboutme" id="about">
+		<div class="aboutme_image">
 			<img class="profilepic" ng-src="data/images/profile.jpg"/>
-			<h2>Zhengbang Chen.</h2>
-			<h3><a ng-href="http://giphy.com/embed/UTvN95v5LlnUI">A designer-developer hybrid</a></h3>
+			<h2>Zhengbang Chen</h2>
+			<p><a ng-href="http://giphy.com/embed/UTvN95v5LlnUI">A designer-engineer hybrid</a></p>
 		</div>
 		<div class="experience">
 			<ul>
@@ -34,55 +45,57 @@
 			</ul>
 		</div>
 	</div>
-	<div class="myworks">
-		<!-- <h2>My Works</h2> -->
-		<div class="eyeimg"><img src="data/images/eye.svg"></div>
-		<h3>Inspired by the elegance of human</h3>
-		<div class="thumbnails">
-			<div class="thumb_nail">
-				<div class="thumb_nail_container">
-					<a ng-href='/apps' target="_self"></a>
-					<h5>Apps & Projects</h5>
-					<p>Innovation, curation and realization.</p>
+	<div class="myworks" id="works">
+		<div class="myworks_container">
+			<h2>My Works</h2>
+			<h3>Inspired by the elegance of human</h3>
+			<div class="thumbnails">
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href='/apps' target="_self"></a>
+						<h5>Apps & Projects</h5>
+						<p>Innovation, curation and realization.</p>
+					</div>
 				</div>
-			</div>
-			<div class="thumb_nail">
-				<div class="thumb_nail_container">
-					<a ng-href="https://medium.com/@zhengbangchen/learning-to-be-design-dev-hybrid-100-designs-9c61a93b145"></a>
-					<h5>Dev-Design Hybrid To-be</h5>
-					<p>Growing vibrantly and Learning Passionately.</p>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="https://medium.com/@zhengbangchen/learning-to-be-design-dev-hybrid-100-designs-9c61a93b145"></a>
+						<h5>Dev-Design Hybrid To-be</h5>
+						<p>Growing vibrantly and Learning Passionately.</p>
+					</div>
 				</div>
-			</div>
-			<div class="thumb_nail">
-				<div class="thumb_nail_container">
-					<a ng-href="https://www.instagram.com/zhengbangc/?hl=en"></a>
-					<h5>Photographs</h5>
-					<p>Crystal clear with a shallow depth of field.</p>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="https://www.instagram.com/zhengbangc/?hl=en"></a>
+						<h5>Photographs</h5>
+						<p>Crystal clear with a shallow depth of field.</p>
+					</div>
 				</div>
-			</div>
-			<div class="thumb_nail">
-				<div class="thumb_nail_container">
-					<a ng-href="/"></a>
-					<h5>Writings & Inspirations</h5>
-					<p>Emotions... all great designs appeal to emotions.</p>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="/"></a>
+						<h5>Writings & Inspirations</h5>
+						<p>Emotions... all great designs appeal to emotions.</p>
+					</div>
 				</div>
-			</div>
-			<div class="thumb_nail">
-				<div class="thumb_nail_container">
-					<a ng-href="/"></a>
-					<h5>C'est La Vie</h5>
-					<p>Carpe Diem!</p>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="/"></a>
+						<h5>C'est La Vie</h5>
+						<p>Carpe Diem!</p>
+					</div>
 				</div>
-			</div>
-			<div class="thumb_nail">
-				<div class="thumb_nail_container">
-					<a ng-href="https://www.youtube.com/watch?v=NHfbzp7VBcI"></a>
-					<h5>Film: Invisible Lover</h5>
-					<p>Montage about a dark love story</p>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="https://www.youtube.com/watch?v=NHfbzp7VBcI"></a>
+						<h5>Film: Invisible Lover</h5>
+						<p>Montage about a dark love story</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+		
 	<div class="contactme">
 			<div class="eyeimg"><img src="data/images/close.svg"></div>
 			<h3>Let's inspire each other</h3>
