--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -1,12 +1,17 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,500|Sacramento:600,400,300|Roboto+Slab:300);
-$raleway: 'Raleway', serif;
-$openSans: 'Open Sans', serif;
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,500,800|Sacramento:600,400,300|Roboto+Slab:300);
+$openSans: 'Open Sans', Helvetica, sans-serif;
+@font-face {
+	font-family: 'Lemon Milk';
+	src: url('../data/LemonMilk.otf') format("opentype");
+}
 
 .contactme{
 	width: 100vw;
-	margin-top: 40px;
+	padding-top: 40px;
+	padding-bottom: 30px;
+	background-color: white;
 	@include breakpoint(large) {
-		margin-top: 60px;		
+		padding-top: 60px;		
 	}
 	padding-bottom: 20px;
 	font-family: $openSans;
@@ -64,15 +69,122 @@ $openSans: 'Open Sans', serif;
 }
 
 .home{
-	.intro{
+	nav {
+		@include breakpoint (small only) {
+			position: fixed;
+			height: 45px;
+			z-index: 4;
+			bottom: 0;
+			@include transition(all 0.5s ease-in-out);
+			&.background_solid {
+				background-color: rgba(0,0,0,0.7);
+			}
+			&.hidden {
+				opacity: 0;
+			}
+		}
+		@include breakpoint(medium) {
+			position: absolute;
+			z-index: 4;
+			top: 80vh;
+			text-align: center;
+		}
+		width: 100%;
+		text-align: center;
+		font-size: 25px;
+		font-weight: 300;
+		a {
+			line-height: 45px;
+			color: white;
+			letter-spacing: 2px;
+			&:visited {
+				color: white;
+			}
+			font-family: $openSans;
+			&:hover {
+				@include breakpoint(medium) {
+					color: #C5B358;
+				}
+			}
+			@include transition(color 0.25s ease-in-out);
+			&:nth-child(2) {
+				&:before {
+					content: '/';
+					padding: 0 5px;
+					color: #C5B358;
+				}
+			}
+			&:nth-child(3) {
+				&:before {
+					content: '/';
+					padding: 0 8px 0 5px;
+					color: #C5B358;
+				}
+			}
+		}
+		
+	}
+
+
+	.intro {
+		width: 100vw;
+		height: 100vh;
+		text-align: center;
+		color: white;
+		position: relative;
+		&:before {
+			content: '';
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			@include linear-gradient-background();	
+			will-change: transform;
+			z-index: -1;		
+		}
+		.intro_container {
+			width: 100%;
+			position: absolute;
+			top: 55%;
+			opacity: 0;
+			@include translateY(-50%);
+			h2 {
+				font-family: 'Lemon Milk', Helvetica, sans-serif;
+				letter-spacing: 4px;
+				font-size: 40px;
+				@include breakpoint (medium) {
+					font-size: 65px;
+				}
+			}	
+			p {
+				font-family: $openSans;
+				text-transform: uppercase;
+				letter-spacing: 2.5px;
+				font-size: 20px;
+				color: #bebebe;
+				@include breakpoint (medium) {
+					font-size: 25px;
+				}
+				span {
+					color: white;
+					background-color: #466B96;
+					padding: 0 5px;
+				}
+			}
+		}
+	}
+
+	.aboutme{
 		width: 100vw;
 		min-height: 80vh;
+		background-color: white;
 		@include breakpoint(large) {
 			min-height: 100vh;
 		}
 		padding: 60px 0;
 		position: relative;
-		.introImage{
+		.aboutme_image{
 			width: 100%;
 			@include breakpoint(large){
 				width: 50%;
@@ -101,17 +213,17 @@ $openSans: 'Open Sans', serif;
 					text-align: right;
 			}
 			h2{
-				font-family: 'Sacramento', Helvetica, sans-serif;
+				font-family: 'Lemon Milk', Helvetica, sans-serif;
 				font-weight: 500;
 				color: #C5B358;
 				letter-spacing: 0.5px;
 				font-size: 25pt;
 				@include breakpoint(large) {
 					margin: 15px auto;
-					font-size: 50px;
+					font-size: 35px;
 				}
 			}
-			h3{
+			p{
 				@include breakpoint(large){
 					font-size: 25px;
 				}
@@ -195,7 +307,7 @@ $openSans: 'Open Sans', serif;
 					}
 					p{
 						position: relative;
-						font-family: 'Roboto Slab', garamond, serif;
+						font-family: 'Open Sans', garamond, serif;
 						/*letter-spacing: 1px;*/
 						&.extended{
 							height: auto;
@@ -226,157 +338,166 @@ $openSans: 'Open Sans', serif;
 			}
 		}
 	}
-	.myworks{
-		overflow: hidden;
-		@include breakpoint(small only){
-			margin-bottom: 30px;
-			min-height: 80vh;
-		}
-		@include breakpoint(large){
-			width: 80vw;
-			margin-left: auto;
-			margin-right: auto;
-			min-height: 80vh;
-		}
-
-		h3{
-			font-family: $openSans;
-			color: #808080;
-			letter-spacing: 1px;
-			text-align: center;
-			margin-top: 5px;
-			font-weight: 300;
-			font-size: 20px;
-			@include breakpoint (large) {
-				font-size: 30px;
+	.myworks {
+		width: 100%;
+		background-color: #f9f9f9;
+		padding: 40px 0;
+		.myworks_container{
+			overflow: hidden;
+			@include breakpoint(small only){
+				margin-bottom: 30px;
+				min-height: 80vh;
 			}
-		}
-		.thumbnails{
-			margin-top: 20px;
-			width: 100%;
-			margin: auto;
-			max-width: 1000px;
-			padding: 0 5px;
-			.thumb_nail{
-				opacity:0;
-				display: inline-block;
-				padding: 5px 5px;
-				@include translateY(-10px);
-				cursor: pointer;
-				@include breakpoint(small){
-					height:150px;
-					width: 50%;
-					float: left;
+			@include breakpoint(large){
+				width: 80vw;
+				margin-left: auto;
+				margin-right: auto;
+			}
+			h2 {
+				font-family: 'Sacramento', Helvetica;
+				text-align: center;
+				font-size: 45px;
+				font-weight: 600;
+				color: #C5B358;
+			}
+			h3{
+				font-family: $openSans;
+				color: #808080;
+				letter-spacing: 1px;
+				text-align: center;
+				margin-top: 5px;
+				font-weight: 300;
+				font-size: 20px;
+				@include breakpoint (large) {
+					font-size: 30px;
 				}
-				@include breakpoint(medium){
-					height: 200px;
-					padding: 10px 10px 10px 10px;
-				}
-				@include breakpoint(large){
-					width: percentage(1/3);
-					height: 200px;
-				}
-				&.appear{
-					@include translateY(0px);
-					opacity: 1;
-					@include transition(all 0.5s ease-in-out);
-					&:hover{
-						@include scale(1.03, 1.03);
-						@include transition(all 0.25s ease-out);
-						.thumb_nail_container {
-							background-color: rgba(0,0,0, 0.8);
-							h5{
-								color: #C5B358;
-							}
-							p{
-								@include transition(all 0.4s ease-in-out);
-								opacity: 1;
+			}
+			.thumbnails{
+				margin-top: 20px;
+				width: 100%;
+				margin: auto;
+				max-width: 1000px;
+				padding: 0 5px;
+				.thumb_nail{
+					opacity:0;
+					display: inline-block;
+					padding: 5px 5px;
+					@include translateY(-10px);
+					cursor: pointer;
+					@include breakpoint(small){
+						height:150px;
+						width: 50%;
+						float: left;
+					}
+					@include breakpoint(medium){
+						height: 200px;
+						padding: 10px 10px 10px 10px;
+					}
+					@include breakpoint(large){
+						width: percentage(1/3);
+						height: 200px;
+					}
+					&.appear{
+						@include translateY(0px);
+						opacity: 1;
+						@include transition(all 0.5s ease-in-out);
+						&:hover{
+							@include scale(1.03, 1.03);
+							@include transition(all 0.25s ease-out);
+							.thumb_nail_container {
+								background-color: rgba(0,0,0, 0.8);
+								h5{
+									color: #C5B358;
+								}
+								p{
+									@include transition(all 0.4s ease-in-out);
+									opacity: 1;
+								}
 							}
 						}
 					}
-				}
-
-				
-				.thumb_nail_container {
-					border-radius: 6px;
-					width: 100%;
-					height: 100%;
-					margin: auto;
-					background-size:cover; 
-					background-position:center center; 
-					background-repeat:no-repeat;
-					background-color: rgba(0,0,0,0.5);
-					background-blend-mode: overlay;
-					position: relative;
-					h5{
-						position: absolute;
-						@include breakpoint(small){
-							left: 10px;
-							top: 5px;
-							font-size: 18px;
+					.thumb_nail_container {
+						border-radius: 6px;
+						width: 100%;
+						height: 100%;
+						margin: auto;
+						background-size:cover; 
+						background-position:center center; 
+						background-repeat:no-repeat;
+						background-color: rgba(0,0,0,0.5);
+						background-blend-mode: overlay;
+						position: relative;
+						h5{
+							position: absolute;
+							@include breakpoint(small){
+								left: 10px;
+								top: 5px;
+								font-size: 18px;
+							}
+							@include breakpoint(medium){
+								left: 20px;
+								top: 13px;
+								font-size: 20px;
+							}
+							font-family: $openSans;
+							letter-spacing: 0.8px;
+							color: white;
 						}
-						@include breakpoint(medium){
+						p{
+							@include breakpoint(small){
+								display: none;
+							}
+							@include breakpoint(medium){
+								display: block;
+							}
+							position: absolute;
+							opacity:0;
+							font-family: 'Roboto Slab', garamond, serif;
+							letter-spacing: 0.8px;
+							color: white;
+							top: 45px;
 							left: 20px;
-							top: 13px;
-							font-size: 20px;
+							width: 80%;
+							font-size: 18px;
+						} 
+					}
+					&:nth-child(1){
+						.thumb_nail_container {
+							background-image: url('../data/images/project_sapphire.png');
 						}
-						font-family: $openSans;
-						letter-spacing: 0.8px;
-						color: white;
 					}
-					p{
-						@include breakpoint(small){
-							display: none;
+					&:nth-child(2){
+						.thumb_nail_container {
+							background-image: url('../data/images/work_designs.png');
 						}
-						@include breakpoint(medium){
-							display: block;
+					}
+					&:nth-child(3){
+						.thumb_nail_container {
+							background-image: url('../data/images/work_photos.png');
 						}
-						position: absolute;
-						opacity:0;
-						font-family: 'Roboto Slab', garamond, serif;
-						letter-spacing: 0.8px;
-						color: white;
-						top: 45px;
-						left: 20px;
-						width: 80%;
-						font-size: 18px;
-					} 
-				}
-				&:nth-child(1){
-					.thumb_nail_container {
-						background-image: url('../data/images/project_sapphire.png');
 					}
-				}
-				&:nth-child(2){
-					.thumb_nail_container {
-						background-image: url('../data/images/work_designs.png');
+					&:nth-child(4){
+						cursor: default;
+						.thumb_nail_container {
+							background-image: url('../data/images/work_writings.png');
+						}
 					}
-				}
-				&:nth-child(3){
-					.thumb_nail_container {
-						background-image: url('../data/images/work_photos.png');
+					&:nth-child(5){
+						cursor: default;
+						.thumb_nail_container {
+							background-image: url('../data/images/cestlavie.png');
+						}
 					}
-				}
-				&:nth-child(4){
-					cursor: default;
-					.thumb_nail_container {
-						background-image: url('../data/images/work_writings.png');
-					}
-				}
-				&:nth-child(5){
-					cursor: default;
-					.thumb_nail_container {
-						background-image: url('../data/images/cestlavie.png');
-					}
-				}
-				&:nth-child(6){
-					.thumb_nail_container {
-						background-image: url('../data/images/work_montage.png');
+					&:nth-child(6){
+						.thumb_nail_container {
+							background-image: url('../data/images/work_montage.png');
+						}
 					}
 				}
 			}
 		}
 	}
+
 	
 	
 }
