--- a/source_sass/_mixins.scss
+++ b/source_sass/_mixins.scss
@@ -49,3 +49,14 @@
 	-moz-box-shadow: 0px 10px 10px  #888;
 	box-shadow: 0px 10px 10px  #888;
 }
+
+@mixin linear-gradient-background() {
+	background: rgba(0, 0, 0, 0.55), url('../data/images/fixed-background.jpg') no-repeat; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background.jpg') no-repeat; /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background.jpg') no-repeat; /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background.jpg') no-repeat; /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background.jpg') no-repeat; /* Standard syntax */
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+}
