--- a/source_sass/_mixins.scss
+++ b/source_sass/_mixins.scss
@@ -60,3 +60,14 @@
 	background-size: cover;
 	background-attachment: fixed;
 }
+
+@mixin linear-gradient-background-small() {
+	background: rgba(0, 0, 0, 0.55), url('../data/images/fixed-background-small.png') no-repeat; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background-small.png') no-repeat; /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background-small.png') no-repeat; /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background-small.png') no-repeat; /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../data/images/fixed-background-small.png') no-repeat; /* Standard syntax */
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+}
