--- a/source_sass/_mixins.scss
+++ b/source_sass/_mixins.scss
@@ -70,4 +70,5 @@
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
+	-webkit-background-size:414px 736px; 
 }
