--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -130,15 +130,16 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 		position: relative;
 		&:before {
 			content: '';
-			position: fixed;
 			width: 100%;
 			height: 100%;
 			top: 0;
 			left: 0;
 			@include breakpoint (small only) {
 				@include linear-gradient-background-small();	
+				position: absolute;
 			}
 			@include breakpoint (medium) {
+				position: fixed;
 				will-change: transform;
 				@include linear-gradient-background();	
 			}
