--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,7 +1,7 @@
 <div class="home">
 	<nav>
-		<a href="#works">Works</a>
 		<a href="#about">About</a>
+		<a href="#works">Works</a>
 		<a href="">Skills</a>
 	</nav>
 	<div class="intro">
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 	<div class="aboutme" id="about">
-		<div class="aboutme_image">
+		<div class="aboutme_container">
 			<img class="profilepic" ng-src="data/images/profile.jpg"/>
 			<h2>Zhengbang Chen</h2>
 			<p><a ng-href="http://giphy.com/embed/UTvN95v5LlnUI">A designer-engineer hybrid</a></p>
