--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -68,10 +68,11 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 	nav {
 		@include breakpoint (small only) {
 			position: fixed;
-			height: 55px;
+			height: 45px;
 			z-index: 4;
 			bottom: 0;
 			@include transition(all 0.5s ease-in-out);
+			-webkit-backdrop-filter: blur(4px);
 			&.background_blur {
 				background-color: rgba(0,0,0,0.7);
 			}
@@ -90,7 +91,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 		font-size: 25px;
 		font-weight: 300;
 		a {
-			line-height: 55px;
+			line-height: 45px;
 			color: white;
 			letter-spacing: 2px;
 			&:visited {
@@ -186,7 +187,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 		}
 		padding: 60px 0;
 		position: relative;
-		.aboutme_image{
+		.aboutme_container{
 			width: 100%;
 			@include breakpoint(large){
 				width: 50%;
@@ -201,7 +202,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				border-radius: 50%;			
 				display: block;
 				width: 55%;
-				margin-bottom: 10px;
+				margin-bottom: 20px;
 				margin-left: auto;
 				margin-right: auto;
 				@include breakpoint(large){
@@ -226,6 +227,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				}
 			}
 			p{
+				font-size: 20px;
 				@include breakpoint(large){
 					font-size: 25px;
 				}
@@ -235,6 +237,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				margin-top: -10px;
 				font-weight: 300;
 				text-decoration: none;
+				margin-bottom: 30px;
 				a{
 					color: #808080;
 					border-bottom: dotted 1px #aeaeae;
@@ -261,6 +264,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				max-width: 400px;
 				@include breakpoint(small only) {
 					padding: 0 20px;
+					margin: 0;
 				}
 				@include breakpoint(medium only) {
 					margin: auto;
@@ -342,7 +346,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 	}
 	.myworks {
 		width: 100%;
-		background-color: #f9f9f9;
+		background-color: #f2f2f2;
 		padding: 40px 0;
 		.myworks_container{
 			overflow: hidden;
@@ -359,12 +363,12 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				font-family: 'Sacramento', Helvetica;
 				text-align: center;
 				font-size: 45px;
-				font-weight: 600;
+				font-weight: 400;
 				color: #C5B358;
 			}
 			h3{
 				font-family: $openSans;
-				color: #808080;
+				color: #606060;
 				letter-spacing: 1px;
 				text-align: center;
 				margin-top: 5px;
@@ -419,7 +423,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 						}
 					}
 					.thumb_nail_container {
-						border-radius: 6px;
+						border-radius: 2px;
 						width: 100%;
 						height: 100%;
 						margin: auto;
