--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -360,7 +360,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				margin-right: auto;
 			}
 			h2 {
-				font-family: 'Sacramento', Helvetica;
+				font-family: 'Lemon Milk';
 				text-align: center;
 				font-size: 45px;
 				font-weight: 400;
