--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,8 +1,8 @@
 <div class="home">
 	<nav>
-		<a href="#about">About</a>
-		<a href="#works">Works</a>
-		<a href="">Skills</a>
+		<a href="#about" du-smooth-scroll duration="1000">About</a>
+		<a href="#works" du-smooth-scroll duration="1000">Works</a>
+		<a href="" du-smooth-scroll duration="1000">Skills</a>
 	</nav>
 	<div class="intro">
 		<div class="intro_container">
