--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -2,7 +2,7 @@
 	<nav>
 		<a href="#about" du-smooth-scroll duration="1000">About</a>
 		<a href="#works" du-smooth-scroll duration="1000">Works</a>
-		<a href="" du-smooth-scroll duration="1000">Skills</a>
+		<a href="#skills" du-smooth-scroll duration="1000">Skills</a>
 	</nav>
 	<div class="intro">
 		<div class="intro_container">
@@ -109,9 +109,12 @@
 			</div>
 		</div>
 	</div>
+	<div class="myskills" id="skills">
+		
+	</div>
 		
 	<div class="contactme">
-			<div class="eyeimg"><img src="data/images/close.svg"></div>
+			<h2>Contact Me</h2>
 			<p>Let's inspire each other</p>
 			<a ng-href="https://github.com/zhengbangc">Github</a> /
 			<a ng-href="https://www.linkedin.com/in/zhengbangchen">LinkedIn</a> /
@@ -119,6 +122,6 @@
 			<a ng-href="https://www.instagram.com/zhengbangc/">Instagram</a> /
 			<a ng-href="https://medium.com/@zhengbangchen">Medium</a> /
 			<a ng-href="https://www.facebook.com/zhengbang.chen.79">Facebook</a>
-			<p>2016 &copy; Zhengbang Chen </p>
+			<p class="copyrights">2016 &copy; Zhengbang Chen </p>
 	</div>
 </div>
