--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -2,7 +2,7 @@
 	<nav>
 		<a href="#about" du-smooth-scroll duration="1000">About</a>
 		<a href="#works" du-smooth-scroll duration="1000">Works</a>
-		<a href="#skills" du-smooth-scroll duration="1000">Skills</a>
+		<a href="#contact" du-smooth-scroll duration="1000">Contact</a>
 	</nav>
 	<div class="intro">
 		<div class="intro_container">
@@ -113,7 +113,7 @@
 		
 	</div>
 		
-	<div class="contactme">
+	<div class="contactme" id="contact">
 			<h2>Contact Me</h2>
 			<p>Let's inspire each other</p>
 			<a ng-href="https://github.com/zhengbangc">Github</a> /
