--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -93,7 +93,8 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 		@include breakpoint(medium) {
 			position: absolute;
 			z-index: 4;
-			top: 80vh;
+			top: 62vh;
+			opacity: 0;
 			text-align: center;
 		}
 		width: 100%;
@@ -117,7 +118,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 			&:nth-child(2) {
 				&:before {
 					content: '/';
-					padding: 0 5px;
+					padding: 0 10px 0 5px;
 					color: #C5B358;
 				}
 			}
@@ -359,7 +360,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 	}
 	.myworks {
 		width: 100%;
-		background-color: #f2f2f2;
+		background-color: #f9f9f9;
 		padding: 40px 0 5px 0;
 		@include breakpoint (large) {
 			padding: 40px 0 30px 0;
