--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -425,7 +425,9 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 								box-shadow: 6px 10px 19px -5px rgba(0,0,0,0.75);
 								background-color: rgba(0,0,0, 0.8);
 								h5{
-									opacity: 0;
+									@include breakpoint (large) {
+										opacity: 0;										
+									}
 								}
 								p{
 									@include transition(all 0.4s ease-in-out);
