fix based on feedbacks

--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -175,7 +175,8 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 				span {
 					color: white;
 					background-color: #466B96;
-					padding: 0 5px;
+					display: inline-block;
+					width: 150px;
 				}
 			}
 		}
