--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -25,13 +25,7 @@
 					<p>Develop fullstack Storefront projects with the <a ng-href="http://www.wayfair.com/v/about/meet_the_team">Lifestyle Brand Development team</a> which focuses on giving customers a more personalized and catered browsing experience.</p>
 				</li>
 				<li>
-					<h5>Computer Engineering Undergraduate</h5>
-					<span class="fa fa-angle-right"></span>
-					<h7>University of Illinois at Urbana-Champaign, August 2013 - May 2017</h7>
-					<p>Major in Computer Engineering and immerse myself in a solid technical and academic learning environment. Classes taken: Computer Systems Engineering (ECE391), The Art and Science of Web Programming (CS498RK1), Database Systems (CS411), Design Thinking (ART310).</p>
-				</li>
-				<li>
-					<h5>Executive Board President</h5>
+					<h5>President</h5>
 					<span class="fa fa-angle-right"></span>
 					<h7>Institute of Electrical and Electronic Engineers, May 2016 - Present</h7>
 					<p>Lead and oversee the executive board of <a ng-href="https://ieee.illinois.edu/">Institute of Electrical and Electronic Engineers (IEEE)</a> at optimal to produce inspiring techincal, professional and social events to the general student body. Sustain organizational relations with university departments, other RSOs and companies. Promote advancement and development of members' technical and academic well-being.</p>
@@ -41,6 +35,12 @@
 					<span class="fa fa-angle-right"></span>
 					<h7>Reconstruct Inc., March 2016 - Present</h7>
 					<p>Rebuilt the front end for the FlyingSuperIntendent project which provides predictive visual data analytics for construction projects. Working closely with <a ng-href="https://www.linkedin.com/in/golparvar">Professor Mani Golparvar Fard</a></p>
+				</li>
+				<li>
+					<h5>Computer Engineering Undergrad</h5>
+					<span class="fa fa-angle-right"></span>
+					<h7>University of Illinois at Urbana-Champaign, August 2013 - May 2017</h7>
+					<p>Major in Computer Engineering and immerse myself in a solid technical and academic learning environment. Classes taken: Computer Systems Engineering (ECE391), The Art and Science of Web Programming (CS498RK1), Database Systems (CS411), Design Thinking (ART310).</p>
 				</li>
 			</ul>
 		</div>
