--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -22,7 +22,7 @@
 					<h5>Software Engineering Intern</h5>
 					<span class="fa fa-angle-right"></span>
 					<h7>Wayfair LLC, June 2016 - August 2016</h7>
-					<p>Develop fullstack Storefront projects with the <a ng-href="http://www.wayfair.com/v/about/meet_the_team">Lifestyle Brand Development team</a> which focuses on giving customers a more personalized and catered browsing experience.</p>
+					<p>Developed fullstack Storefront projects in the <a ng-href="http://www.wayfair.com/about">Lifestyle Brand Development team</a> which focuses on giving customers a more personalized and catered browsing experience. I worked with a wide range of teams including the CSS team, Customer Experience Team and Marketing teams for a great variety of projects including building Wayfair's Design Reference, building features with A/B testings and creating features on the Product Detail Page and Superbrowse page to improve user experience and conversion rates.</p>
 				</li>
 				<li>
 					<h5>President</h5>
