--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -152,7 +152,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 			}
 			@include breakpoint (medium) {
 				position: fixed;
-				will-change: transform;
+				// will-change: transform;
 				@include linear-gradient-background();	
 			}
 			z-index: -1;		
@@ -371,7 +371,15 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 			content: '';
 			position: fixed;
 			z-index: -2;
-			@include linear-gradient-background();	
+			@include breakpoint (small only) {
+				@include linear-gradient-background-small();	
+				position: absolute;
+			}
+			@include breakpoint (medium) {
+				position: fixed;
+				// will-change: transform;
+				@include linear-gradient-background();	
+			}	
 			top: 0;
 			left: 0;
 			width: 100%;
