--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -416,7 +416,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 			}
 			p{
 				font-family: $openSans;
-				color: #808080;
+				color: #cecece;
 				letter-spacing: 1px;
 				text-align: center;
 				margin-top: -10px;
