--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -25,22 +25,28 @@
 					<p>Developed fullstack Storefront projects in the <a ng-href="http://www.wayfair.com/about">Lifestyle Brand Development team</a> which focuses on giving customers a more personalized and catered browsing experience. I worked with a wide range of teams including the CSS team, Customer Experience Team and Marketing teams for a great variety of projects including building Wayfair's Design Reference, building features with A/B testings and creating features on the Product Detail Page and Superbrowse page to improve user experience and conversion rates.</p>
 				</li>
 				<li>
+					<h5>Front-end Visual Developer</h5>
+					<span class="fa fa-angle-right"></span>
+					<h7>AITS@UIUC, August 2016 - Present</h7>
+					<p>Designing and building at <a ng-href="https://www.aits.uillinois.edu/">Administrative Information Technology Services at UIUC</a>. Assist in designing interfaces for university applications to make information more viable. Refine the front end of various university web and mobile applications. Sketch, SASS, and JS are my daily bytes.</p>
+				</li>
+				<li>
 					<h5>President</h5>
 					<span class="fa fa-angle-right"></span>
-					<h7>Institute of Electrical and Electronic Engineers, May 2016 - Present</h7>
+					<h7>IEEE UIUC, May 2016 - Present</h7>
 					<p>Lead and oversee the executive board of <a ng-href="https://ieee.illinois.edu/">Institute of Electrical and Electronic Engineers (IEEE), UIUC</a> at optimal to produce inspiring techincal, professional and social events to the general student body. Sustain organizational relations with university departments, other student organizations and companies. Promote advancement and development of members' technical and academic well-being.</p>
 				</li>
 				<li>
 					<h5>Front-end Developer</h5>
 					<span class="fa fa-angle-right"></span>
-					<h7>Reconstruct Inc., March 2016 - Present</h7>
+					<h7>Reconstruct Inc., March 2016 - May, 2016</h7>
 					<p>Rebuilt the front end for the FlyingSuperIntendent project which provides predictive visual data analytics for construction projects. Working closely with <a ng-href="https://www.linkedin.com/in/golparvar">Professor Mani Golparvar Fard</a></p>
 				</li>
 				<li>
 					<h5>Computer Engineering Undergrad</h5>
 					<span class="fa fa-angle-right"></span>
-					<h7>University of Illinois at Urbana-Champaign, August 2013 - May 2017</h7>
-					<p>Major in Computer Engineering and immerse myself in a solid technical and academic learning environment. Classes taken: Computer Systems Engineering (ECE391), The Art and Science of Web Programming (CS498RK1), Database Systems (CS411), Design Thinking (ART310).</p>
+					<h7>UIUC, August 2013 - May 2017</h7>
+					<p>Major in Computer Engineering at the University of Illinois at Urbana-Champaign and immerse myself in a solid technical and academic learning environment. Classes taken: Computer Systems Engineering (ECE391), The Art and Science of Web Programming (CS498RK1), Database Systems (CS411), Design Thinking (ART310).</p>
 				</li>
 			</ul>
 		</div>
