--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -421,7 +421,10 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 			}
 			p{
 				font-family: $openSans;
-				color: #cecece;
+				color: #808080;
+				@include breakpoint (medium) {
+					color: #cecece;					
+				}
 				letter-spacing: 1px;
 				text-align: center;
 				margin-top: -10px;
